=======
CHANGES
=======

3.7.2 (unreleased)
==================

- Fixed bug where OrderedMultiSelectWidget did not respect the widgets
  size attribute.

3.7.1 (2009-01-31)
==================

- Adapt to the upcoming zope.schema release 3.5.1 which will also silence the
  spurious `set` failures.

3.7.0 (2008-12-11)
==================

- use zope.browser.interfaces.ITerms instead of zope.app.form.browser.interfaces

- Depending on zope.schema>=3.5a1 which uses the builtin ``set`` instead of the
  ``sets`` module.


3.6.4 (2008-11-26)
==================

- The URIDisplayWidget doesn't render an anchor for empty/None values.


3.6.3 (2008-10-15)
==================

- Get rid of deprecated usage of LayerField from
  zope.app.component.back35, replaced by
  zope.configuration.fields.GlobalInterface.

3.6.2 (2008-09-08)
==================


- Fixed restructured text in doc tests to unbreak the PyPI page.

(3.6.1 skipped due to a typo)


3.6.0 (2008-08-22)
==================

- Dropdown widgets display an item for the missing value even if the field is
  required when no value is selected. See zope/app/form/browser/README.txt on
  how to switch this off for BBB.

- Source select widgets for required fields are now required as well. They
  used not to be required on the assumption that some value would be selected
  by the browser, which had always been wrong except for dropdown widgets.


3.5.0 (2008-06-05)
==================

- Translate the title on SequenceWidget's "Add <title>" button.

- No longer uses zapi.


3.4.2 (2008-02-07)
==================

- Made display widgets for sources translate message IDs correctly.


3.4.1 (2007-10-31)
==================

- Resolve ``ZopeSecurityPolicy`` deprecation warning.


3.4.0 (2007-10-24)
==================

- ``zope.app.form`` now supports Python2.5

- Initial release independent of the main Zope tree.


Before 3.4
==========

This package was part of the Zope 3 distribution and did not have its own